crates/servicepoint_binding_c/examples/lang_c/include/servicepoint.h

/**
 * A low-level display command.
 *
 * This struct and associated functions implement the UDP protocol for the display.
 *
 * To send a [SPCommand], use a [SPConnection].
 *
 * # Examples
 *
 * ```C
 * sp_connection_send_command(connection, sp_command_clear());
 * sp_connection_send_command(connection, sp_command_brightness(5));
 * ```
 *
 * [SPConnection]: [crate::SPConnection]
 */
typedef struct SPCommand SPCommand;
/**
 * The raw packet
 */
typedef struct SPPacket SPPacket;
/**
 * Clones a [SPPacket].
 *
 * Will never return NULL.
 *
 * # Panics
 *
 * - when `packet` is NULL
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `packet` points to a valid [SPPacket]
 * - `packet` is not written to concurrently
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_packet_free`.
 */
SPPacket *sp_packet_clone(const SPPacket *packet);
/**
 * Deallocates a [SPPacket].
 *
 * # Panics
 *
 * - when `packet` is NULL
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `packet` points to a valid [SPPacket]
 * - `packet` is not used concurrently or after this call
 */
void sp_packet_free(SPPacket *packet);
/**
 * Turns a [SPCommand] into a [SPPacket].
 * The [SPCommand] gets consumed.
 *
 * Will never return NULL.
 *
 * # Panics
 *
 * - when `command` is NULL
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - [SPCommand] points to a valid instance of [SPCommand]
 * - [SPCommand] is not used concurrently or after this call
 * - the returned [SPPacket] instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_packet_free`.
 */
SPPacket *sp_packet_from_command(SPCommand *command);
/**
 * Creates a raw [SPPacket] from parts.
 *
 * # Arguments
 *
 * - `command_code` specifies which command this packet contains
 * - `a`, `b`, `c` and `d` are command-specific header values
 * - `payload` is the optional data that is part of the command
 * - `payload_len` is the size of the payload
 *
 * returns: new instance. Will never return null.
 *
 * # Panics
 *
 * - when `payload` is null, but `payload_len` is not zero
 * - when `payload_len` is zero, but `payload` is nonnull
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `payload` points to a valid memory region of at least `payload_len` bytes
 * - `payload` is not written to concurrently
 * - the returned [SPPacket] instance is freed in some way, either by using a consuming function or
 *   by explicitly calling [sp_packet_free].
 */
SPPacket *sp_packet_from_parts(uint16_t command_code,
                               uint16_t a,
                               uint16_t b,
                               uint16_t c,
                               uint16_t d,
                               const uint8_t *payload,
                               size_t payload_len);
/**
 * Tries to load a [SPPacket] from the passed array with the specified length.
 *
 * returns: NULL in case of an error, pointer to the allocated packet otherwise
 *
 * # Panics
 *
 * - when `data` is NULL
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `data` points to a valid memory region of at least `length` bytes
 * - `data` is not written to concurrently
 * - the returned [SPPacket] instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_packet_free`.
 */
SPPacket *sp_packet_try_load(const uint8_t *data,
                             size_t length);